# jieba_nvim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  data_config.h.in  main.cpp  vim_jieba.py
